--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": false,
-  "trailingComma": none
+  "trailingComma": "none",
+  "endOfLine": "auto"
 }
