--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,13 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "import/no-extraneous-dependencies": [
       "error",
       {
